--- a/jQuery-Version/index.html
+++ b/jQuery-Version/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Wikipedia API</title>
+    <title>Wikipedia API (jQuery)</title>
     <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles.css">
